@@ -1,5 +1,7 @@
 package com.vawndev.spring_boot_readnovel.Services.Impl;
 
+import com.vawndev.spring_boot_readnovel.Dto.Requests.FILE.ImageCoverRequest;
+import com.vawndev.spring_boot_readnovel.Dto.Requests.FILE.ImageFileRequest;
 import com.vawndev.spring_boot_readnovel.Dto.Requests.PageRequest;
 import com.vawndev.spring_boot_readnovel.Dto.Requests.Story.ModeratedByAdmin;
 import com.vawndev.spring_boot_readnovel.Dto.Requests.Story.StoryRequests;
@@ -11,30 +13,29 @@ import com.vawndev.spring_boot_readnovel.Dto.Responses.Story.StoryResponse;
 import com.vawndev.spring_boot_readnovel.Entities.Chapter;
 import com.vawndev.spring_boot_readnovel.Entities.Story;
 import com.vawndev.spring_boot_readnovel.Entities.User;
-import com.vawndev.spring_boot_readnovel.Enum.ROLE;
-import com.vawndev.spring_boot_readnovel.Enum.StoryState;
 import com.vawndev.spring_boot_readnovel.Exceptions.AppException;
 import com.vawndev.spring_boot_readnovel.Exceptions.ErrorCode;
+import com.vawndev.spring_boot_readnovel.Mappers.ChapterMapper;
 import com.vawndev.spring_boot_readnovel.Mappers.StoryMapper;
 import com.vawndev.spring_boot_readnovel.Repositories.ChapterRepository;
 import com.vawndev.spring_boot_readnovel.Repositories.StoryRepository;
 import com.vawndev.spring_boot_readnovel.Repositories.UserRepository;
+import com.vawndev.spring_boot_readnovel.Services.CloundService;
 import com.vawndev.spring_boot_readnovel.Services.StoryService;
-import com.vawndev.spring_boot_readnovel.Util.PaginationUtil;
+import com.vawndev.spring_boot_readnovel.Utils.PaginationUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.BeanWrapper;
 import org.springframework.beans.BeanWrapperImpl;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
-import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.beans.FeatureDescriptor;
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -45,6 +46,9 @@ public class StoryServiceImpl implements StoryService {
     private final UserRepository userRepository;
     private final ChapterRepository chapterRepository;
     private final StoryMapper storyMapper;
+    private final ChapterMapper chapterMapper;
+    private final CloundService cloundService;
+
 
     private String[] getNullPropertyNames(Object source) {
         final BeanWrapper wrappedSource = new BeanWrapperImpl(source);
@@ -64,19 +68,15 @@ public class StoryServiceImpl implements StoryService {
         try {
             Pageable pageable = PaginationUtil.createPageable(req.getPage(), req.getLimit());
 
-            Page<Story> storyPage = storyRepository.findAllByStateAndIsApprovedAndIsAvailableAndDeleteAtIsNull(
-                    StoryState.PUBLISHED,
-                    true,
-                    true,
-                    pageable
-            );
+            Page<Story> storyPage = storyRepository.findAll(pageable);
             List<StoriesResponse> stories = storyPage.getContent()
                     .stream()
                     .map(story -> StoriesResponse.builder()
                             .title(story.getTitle())
                             .rate(story.getRate())
-                            .views(story.getViews())
-                            .view(story.getView())
+                            .view(story.getViews())
+                            .coverImage(story.getCoverImage())
+                            .id(story.getId())
                             .build())
                     .collect(Collectors.toList());
 
@@ -87,12 +87,12 @@ public class StoryServiceImpl implements StoryService {
                     .total(storyPage.getTotalPages())
                     .build();
         } catch (Exception e) {
-            throw new AppException(ErrorCode.SERVER_ERROR);
+            throw new RuntimeException(e);
         }
     }
 
     @Override
-    @PreAuthorize("hasRole('ADMIN')")
+//    @PreAuthorize("hasRole('ADMIN')")
     public PageResponse<StoriesResponse> getStoriesByAdmin(PageRequest req) {
         Pageable pageable = PaginationUtil.createPageable(req.getPage(), req.getLimit());
         Page<Story> storyPage = storyRepository.findAll(pageable);
@@ -107,47 +107,58 @@ public class StoryServiceImpl implements StoryService {
 
 
     @Override
-    public void addStory(StoryRequests req) {
+    public void addStory(StoryRequests req, MultipartFile image_cover) {
         User author = author(req.getEmailAuthor());
 
         try{
+            ImageCoverRequest imageCoverRequest=new ImageCoverRequest();
+            imageCoverRequest.setImage_cover(image_cover);
+            String CoverImage=cloundService.getUrlCoverAfterUpload(imageCoverRequest);
             Story story = Story
                     .builder()
                     .author(author)
                     .categories(req.getCategories())
                     .description(req.getDescription())
                     .isApproved(false)
-                    .state(req.getState())
                     .rate(0)
-                    .view(0L)
-                    .views(0)
+                    .views(0L)
+                    .type(req.getType())
+                    .coverImage(CoverImage)
                     .price(req.getPrice())
-                    .state(req.getState())
                     .title(req.getTitle())
                     .price(req.getPrice())
                     .build();
             storyRepository.save(story);
         } catch (Exception e) {
-            throw new RuntimeException(e);
+            throw new RuntimeException("Error while processing file: " + image_cover.getOriginalFilename() + " - " + e.getMessage(), e);
         }
     }
 
+
     @Override
-    @PreAuthorize("hasRole('AUTHOR')")
-    public void updateStoryByAuthor(StoryRequests req) {
+//    @PreAuthorize("hasRole('AUTHOR')")
+    public void updateStoryByAuthor(StoryRequests req,String id,MultipartFile image) {
         User author = author(req.getEmailAuthor());
-            Story story=storyRepository.findByIdAndAuthor(req.getId(),author).orElseThrow(()->new AppException(ErrorCode.INVALID_STORY));
-            try{
-                BeanUtils.copyProperties(req, story,getNullPropertyNames(req));
-                storyRepository.save(story);
-            } catch (Exception e) {
-                throw new RuntimeException(e);
+        Story story = storyRepository.findByIdAndAuthor(id ,author)
+                .orElseThrow(() -> new AppException(ErrorCode.INVALID_STORY));
+        try {
+            if (image != null) {
+                ImageFileRequest imagereq=new ImageFileRequest();
+                imagereq.setFile((List<MultipartFile>) image);
+                String CoverImage=cloundService.getUrlChapterAfterUpload(imagereq).get(0);
+                story.setCoverImage(CoverImage);
             }
-
-
+            BeanUtils.copyProperties(req, story, getNullPropertyNames(req));
+            storyRepository.save(story);
+        } catch (Exception e) {
+            throw new AppException(ErrorCode.INVALID_STORY);
+        }
     }
+
+
+
     @Override
-    @PreAuthorize("hasRole('ADMIN')")
+//    @PreAuthorize("hasRole('ADMIN')")
     public void ModeratedByAdmin(ModeratedByAdmin req) {
         User user = author(req.getEmail());
             Story story=storyRepository.findById(req.getStory_id()).orElseThrow(()->new AppException(ErrorCode.INVALID_STORY));
@@ -162,7 +173,7 @@ public class StoryServiceImpl implements StoryService {
     }
 
     @Override
-    @PreAuthorize("hasRole('AUTHOR')")
+//    @PreAuthorize("hasRole('AUTHOR')")
     public void deleteSoftStory(String email , String id) {
             Story story=storyRepository.findById(id).orElseThrow(()->new AppException(ErrorCode.INVALID_STORY));
             try {
@@ -175,7 +186,7 @@ public class StoryServiceImpl implements StoryService {
     }
 
     @Override
-    @PreAuthorize("hasRole('ADMIN')")
+//    @PreAuthorize("hasRole('ADMIN')")
     public void deleteStory(ModeratedByAdmin req) {
         Story story =storyRepository.findById(req.getStory_id()).orElseThrow(()->new AppException(ErrorCode.INVALID_STORY));
         storyRepository.delete(story);
@@ -187,29 +198,8 @@ public class StoryServiceImpl implements StoryService {
         List<Chapter> chapters = chapterRepository.findAllByStoryId(story.getId());
 
         try{
-            StoryResponse storyRes= StoryResponse
-                    .builder()
-                    .author(story.getAuthor())
-                    .createdAt(story.getCreatedAt())
-                    .updatedAt(story.getUpdatedAt())
-                    .price(story.getPrice())
-                    .type(story.getType())
-                    .views(story.getViews())
-                    .view(story.getView())
-                    .categories(story.getCategories())
-                    .description(story.getDescription())
-                    .title(story.getTitle())
-                    .build();
-
-            List<ChapterResponses> chaptersRes=chapters.stream().map(chapter->ChapterResponses
-                    .builder()
-                    .content(chapter.getContent())
-                    .images(chapter.getImages())
-                    .price(chapter.getPrice())
-                    .title(chapter.getTitle())
-                    .build()
-            ).toList();
-
+            StoryResponse storyRes= storyMapper.toStoryResponse(story);
+            List<ChapterResponses> chaptersRes=chapters.stream().map(chapter->chapterMapper.toChapterResponses(chapter)).collect(Collectors.toList());
             return StoryDetailResponses
                     .builder()
                     .chapter(chaptersRes)
